# firefox-ai

./: .env.example  .gitignore  README.md  firefox-ai.service  index.html  package.json  server.py  server_litert.py
nextjs/: README.md  biome.json  next.config.ts
nextjs/src/app/: layout.tsx
nextjs/src/app/api/chat/: route.ts
nextjs/src/app/utils/: currentTime.ts
server-litert/: .env.example  .gitignore  README.md  index.html  pyproject.toml  server.py
server-litert/static/: style.css
server-litert/tool/: __init__.py  get_weather.py  web_browser.py  web_fetch.py  web_search.py
server_litert/: index.html  pyproject.toml
src/app/api/chat/: route.ts
src/app/components/: Chat.tsx
src/app/hooks/: use-markdown-processor.tsx
static/: style.css
tool/: __init__.py  _utils.py  web_browser.py  web_fetch.py  web_search.py
