[project]
name = "server-litert"
version = "0.1.0"
description = "Local chat server using litert_lm"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.135.3",
    "python-multipart>=0.0.6",
    "litert-lm>=0.10.1",
    "numpy>=2.4.4",
    "pillow>=11.0.0",
    "uvicorn[standard]>=0.43.0",
]
